[package]
name = "gsheet"
authors = ["jjajjajja <jizon0123@protonmail.com>"]
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1.0" }
serde = { version = "1.0" }
oauth2 = { version = "4.2.3" }
anyhow = { version = "1.0" }